--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "my-blog-next",
+  "name": "wonbeenna.github.io",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://wonbeenna.github.io",
+  "homepage": "https://wonbeenna.github.io/",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "deploy": "next build && next export && touch out/.nojekyll && git add -f out/ && git commit -m 'deploy to gh-pages' && git subtree push --prefix out origin gh-pages"
+    "deploy": "next build && touch out/.nojekyll && git add -f out/ && git commit -m 'deploy to gh-pages' && git subtree push --prefix out origin gh-pages"
   },
   "dependencies": {
     "@mdx-js/loader": "^2.3.0",
@@ -17,7 +17,7 @@
     "autoprefixer": "10.4.16",
     "dayjs": "^1.11.10",
     "gray-matter": "^4.0.3",
-    "next": "13.5.2",
+    "next": "13.5.3",
     "next-mdx-remote": "^3.0.1",
     "postcss": "8.4.30",
     "react": "18.2.0",
