--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-tailwindcss": "^3.13.0",
     "gh-pages": "^6.0.0",
+    "postcss-nesting": "^12.0.1",
     "prettier": "^3.0.3",
     "rehype-prism-plus": "^1.6.3",
     "remark-gfm": "^3.0.1",
