--- a/package.json
+++ b/package.json
@@ -12,33 +12,34 @@
   },
   "dependencies": {
     "@giscus/react": "^2.3.0",
-    "@mdx-js/loader": "^2.3.0",
-    "@mdx-js/react": "^2.3.0",
-    "@next/mdx": "^13.5.2",
+    "@mdx-js/loader": "^3.0.0",
+    "@mdx-js/react": "^3.0.0",
+    "@next/mdx": "^14.0.4",
     "autoprefixer": "10.4.16",
     "dayjs": "^1.11.10",
     "gray-matter": "^4.0.3",
-    "next": "13.5.3",
-    "next-mdx-remote": "^3.0.1",
-    "postcss": "8.4.31",
+    "next": "14.0.4",
+    "next-mdx-remote": "^4.4.1",
+    "next-themes": "^0.2.1",
+    "postcss": "8.4.32",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.3"
+    "tailwindcss": "3.3.6"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
-    "@types/node": "20.6.5",
-    "@types/react": "18.2.22",
-    "@types/react-dom": "18.2.7",
-    "eslint": "^8.50.0",
-    "eslint-config-next": "^13.4.1",
-    "eslint-config-prettier": "^9.0.0",
+    "@types/node": "20.10.4",
+    "@types/react": "18.2.42",
+    "@types/react-dom": "18.2.17",
+    "eslint": "^8.55.0",
+    "eslint-config-next": "^14.0.4",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-tailwindcss": "^3.13.0",
-    "gh-pages": "^6.0.0",
+    "gh-pages": "^6.1.0",
     "postcss-nesting": "^12.0.1",
-    "prettier": "^3.0.3",
+    "prettier": "^3.1.0",
     "rehype-prism-plus": "^1.6.3",
     "remark-gfm": "^4.0.0",
-    "typescript": "5.2.2"
+    "typescript": "5.3.3"
   }
 }
