--- a/package.json
+++ b/package.json
@@ -11,35 +11,38 @@
     "deploy": "next build && touch out/.nojekyll && git add -f out/ && git commit -m 'deploy to gh-pages' && git subtree push --prefix out origin gh-pages"
   },
   "dependencies": {
-    "@giscus/react": "^2.3.0",
-    "@mdx-js/loader": "^3.0.0",
-    "@mdx-js/react": "^3.0.0",
-    "@next/mdx": "^14.0.4",
-    "autoprefixer": "10.4.16",
-    "dayjs": "^1.11.10",
+    "@giscus/react": "^3.0.0",
+    "@mdx-js/loader": "^3.0.1",
+    "@mdx-js/react": "^3.0.1",
+    "@next/mdx": "^14.2.14",
+    "autoprefixer": "^10.4.20",
+    "dayjs": "^1.11.13",
     "gray-matter": "^4.0.3",
-    "next": "14.0.4",
-    "next-mdx-remote": "^3.0.1",
-    "next-themes": "^0.2.1",
-    "postcss": "8.4.32",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tailwindcss": "3.3.6"
+    "next": "^14.2.14",
+    "next-mdx-remote": "^5.0.0",
+    "next-themes": "^0.3.0",
+    "postcss": "^8.4.47",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "tailwindcss": "^3.4.13"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.10",
-    "@types/node": "20.10.4",
-    "@types/react": "18.2.42",
-    "@types/react-dom": "18.2.17",
-    "eslint": "^8.55.0",
-    "eslint-config-next": "^14.0.4",
+    "@tailwindcss/typography": "^0.5.15",
+    "@types/node": "^22.7.4",
+    "@types/react": "^18.3.11",
+    "@types/react-dom": "^18.3.0",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "^14.2.14",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-tailwindcss": "^3.13.0",
-    "gh-pages": "^6.1.0",
-    "postcss-nesting": "^12.0.1",
-    "prettier": "^3.1.0",
-    "rehype-prism-plus": "^1.6.3",
+    "eslint-plugin-react": "^7.37.1",
+    "eslint-plugin-tailwindcss": "^3.17.4",
+    "gh-pages": "^6.1.1",
+    "globals": "^15.10.0",
+    "postcss-nesting": "^13.0.0",
+    "prettier": "^3.3.3",
+    "rehype-prism-plus": "^2.0.0",
     "remark-gfm": "^4.0.0",
-    "typescript": "5.3.3"
+    "typescript": "^5.6.2",
+    "typescript-eslint": "^8.8.0"
   }
 }
