--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "dayjs": "^1.11.13",
     "gray-matter": "^4.0.3",
     "lodash.debounce": "^4.0.8",
-    "next": "^15.1.0",
+    "next": "15.2.4",
     "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.4.4",
     "postcss": "^8.4.49",
