--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "deploy": "next build && touch out/.nojekyll && git add -f out/ && git commit -m 'deploy to gh-pages' && git subtree push --prefix out origin gh-pages"
   },
   "dependencies": {
-    "@giscus/react": "^3.0.0",
+    "@giscus/react": "^3.1.0",
     "@mdx-js/loader": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
     "@next/mdx": "^15.1.0",
@@ -19,7 +19,7 @@
     "dayjs": "^1.11.13",
     "gray-matter": "^4.0.3",
     "lodash.debounce": "^4.0.8",
-    "next": "15.3.0",
+    "next": "^15.5.2",
     "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.4.4",
     "postcss": "^8.4.49",
@@ -35,7 +35,7 @@
     "@types/react-dom": "^19.1.2",
     "eslint": "^9.16.0",
     "eslint-config-next": "^15.1.0",
-    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-tailwindcss": "^3.17.5",
     "gh-pages": "^6.2.0",
@@ -45,6 +45,6 @@
     "rehype-prism-plus": "^2.0.0",
     "remark-gfm": "^4.0.0",
     "typescript": "^5.8.3",
-    "typescript-eslint": "^8.18.0"
+    "typescript-eslint": "^8.41.0"
   }
 }
