--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mdx-js/react": "^3.1.0",
     "@next/mdx": "^15.1.0",
     "autoprefixer": "^10.4.20",
+    "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "gray-matter": "^4.0.3",
     "lodash.debounce": "^4.0.8",
@@ -25,6 +26,7 @@
     "postcss": "^8.4.49",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^3.4.16"
   },
   "devDependencies": {
@@ -41,7 +43,8 @@
     "gh-pages": "^6.2.0",
     "globals": "^15.13.0",
     "postcss-nesting": "^13.0.1",
-    "prettier": "^3.4.2",
+    "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.7.1",
     "rehype-prism-plus": "^2.0.0",
     "remark-gfm": "^4.0.0",
     "typescript": "^5.8.3",
