--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dayjs": "^1.11.13",
     "gray-matter": "^4.0.3",
     "lodash.debounce": "^4.0.8",
+    "motion": "^12.23.24",
     "next": "^15.5.2",
     "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.4.4",
