--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
+    "fuse.js": "^7.1.0",
     "gray-matter": "^4.0.3",
-    "lodash.debounce": "^4.0.8",
     "motion": "^12.23.24",
     "next": "^15.5.2",
     "next-mdx-remote": "^5.0.0",
