fix: next version

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@giscus/react": "^3.1.0",
     "@mdx-js/loader": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
-    "@next/mdx": "^15.1.0",
+    "@next/mdx": "16.0.1",
     "autoprefixer": "^10.4.20",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
@@ -22,12 +22,12 @@
     "fuse.js": "^7.1.0",
     "gray-matter": "^4.0.3",
     "motion": "^12.23.24",
-    "next": "^15.5.2",
+    "next": "16.0.1",
     "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.4.4",
     "postcss": "^8.4.49",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^3.4.16"
   },
@@ -35,10 +35,10 @@
     "@tailwindcss/typography": "^0.5.15",
     "@types/lodash.debounce": "^4.0.9",
     "@types/node": "^22.10.2",
-    "@types/react": "^19.1.2",
-    "@types/react-dom": "^19.1.2",
+    "@types/react": "19.2.3",
+    "@types/react-dom": "19.2.3",
     "eslint": "^9.16.0",
-    "eslint-config-next": "^15.1.0",
+    "eslint-config-next": "16.0.1",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-tailwindcss": "^3.17.5",
@@ -56,5 +56,9 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.41.0"
+  },
+  "overrides": {
+    "@types/react": "19.2.3",
+    "@types/react-dom": "19.2.3"
   }
 }
