--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
     "date-fns": "^4.1.0",
     "fuse.js": "^7.1.0",
     "motion": "^12.23.24",
-    "next": "16.0.1",
+    "next": "^16.0.7",
     "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.4.6",
     "postcss": "^8.5.6",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "19.2.1",
+    "react-dom": "19.2.1",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^3.4.18"
   },
